Help wrapping: :max-width-fn (default detects width; JLine probe on JVM)